# flappy_rust

./: Cargo.toml  README.md
src/: bird.rs  game.rs  game_objects.rs  main.rs  pipe.rs
