[package]
name = "flappy_rust"
version = "0.1.0"
authors = ["pedrojjsantos <pedrojjsantos.cc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = {git = "https://github.com/ggez/ggez", branch = "devel"}
oorandom = "11.1.3"
glam = "0.14.0"
getrandom = "0.2.2"